	  parse_argument(), colortoint(), parse_next_regex(),
	  parse_syntax(), parse_colors(), parse_rcfile(), do_rcfile(),
	  etc. (David Benbennick)  DLR: Rename colortoint() to
	  color_to_int(), and add a few miscellaneous tweaks.
	- Still more steps toward full wide/multibyte character support.
	  Make whitespace display mode work with multibyte characters,
	  and add a few related documentation updates.  Changes to
	  do_help(), main(), parse_rcfile(), and display_string(). (DLR)
- cut.c:
  do_cut_text()
	- If keep_cutbuffer is FALSE, only blow away the text in the
	  cutbuffer if the cutbuffer isn't empty. (DLR)
  do_uncut_text()
	- No longer duplicate Pico's adding an extra magicline to the
	  file if uncutting leaves the cursor on the current one.  This
	  behavior appears to be a bug, as inserting a file in the same
	  manner doesn't add an extra magicline. (DLR)
- files.c:
  get_full_path()
	- Remove unneeded NANO_SMALL #ifdef, so that it's included
	  whenever its prototype is, and so it can compile when
	  DISABLE_OPERATINGDIR isn't defined and NANO_SMALL is. (DLR)
- global.c:
  shortcut_init()
	- Fix misplaced #endif keeping the "Full Justify" shortcut in
	  the search shortcut list from being included when NANO_SMALL
	  is defined but DISABLE_JUSTIFY isn't. (DLR)
	- Use NULL instead of 0 when a shortcut has no associated
	  function. (DLR)
  thanks_for_all_the_fish()
	- Free the justify buffer if it isn't empty. (DLR)
- nano.c:
  help_init()
	- Clarify the text describing double-escape character input.
	  Since ASCII is technically only seven bits wide, characters
	  128-255 aren't ASCII. (DLR, suggested by Michael Piefel)
  do_toggle()
	- When we get the whitespace display toggle, update the titlebar
	  as well as the edit window, in case the filename displayed on
	  the titlebar contains spaces or tabs. (DLR)
  handle_sigwinch()
	- If the justify buffer isn't empty, blow it away and don't
	  display "UnJustify" in the shortcut list anymore. (DLR)